--- a/widget/ProductWidget.html
+++ b/widget/ProductWidget.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>商品の詳細</title>
     <link href="./styles.css" rel="stylesheet">
     <script type="module" src="./src/ProductWidget.tsx"></script>
