--- a/widget/CartWidget.html
+++ b/widget/CartWidget.html
@@ -7,6 +7,6 @@
     <script type="module" src="./src/CartWidget.tsx"></script>
   </head>
   <body>
-    <main id="root"></main>
+    <main id="root" style="padding: 16px;"></main>
   </body>
 </html>
